# qBitTorrent-Theme-Switcher

./: CMakeLists.txt  README.md  main.cpp
